2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm,
	* tp/Texinfo/Convert/Plaintext.pm,
	* tp/Texinfo/Structuring.pm: Test perl version and only
	"use feature 'unicode_strings'" if perl version is at
	least 5.012.  Otherwise, "use locale;" and try to set a
	Latin-1 locale.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Fonts): More tests of fonts.  Add 
	section testing glyph commands.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Remove note about updating texi2html tests, 
	and note about building standalone modules for CPAN.  Move
	advice on updating web pages together.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Change version number 
	to "0" as (a) alphabetic characters in the version don't work 
	here, and (b) this saves us having to update the version here.
	* README-hacking: Remove note to update the version number in 
	these two files.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac, tp/Texinfo/Convert/XSParagraph/configure.ac,
	tp/Texinfo/Convert/XSParagraph/TestXS.pm: Bump version to 6.3dev.
	Remove "dist-xz" option for testing.

2016-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac, configure.ac
	(PERL_EXT_CC): New variable to override compiler used to build 
	XS extension.

2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Customization Variables and Options): Remove 
	index entries for some customization variables with index 
	entries duplicated elsewhere.  These variables are 
	'documentlanguage', 'HEADERS', and 'SHOW_MENU'.
	(Other Customization Variables): Add index entry for 'HEADERS'.

2016-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (indices_information): Do not return